--- a/frontend/flower-app/src/css/Header.css
+++ b/frontend/flower-app/src/css/Header.css
@@ -84,12 +84,60 @@
     display: block;
 }
 
+#account-enabler {
+
+}
+
+#account-enabler .dropdown-toggle {
+    padding: 0;
+    background-color: transparent;
+    color: unset;
+    border: none;
+}
+
+#account-enabler .dropdown-toggle:active {
+    background-color: transparent !important;
+    color: unset;
+}
+
+#account-enabler .dropdown-toggle::after {
+    display: none;
+}
+
+#account-enabler .dropdown-menu {
+    cursor: default;
+}
+
 .account {
     font-size: 18px;
+    margin: 0 !important;
 }
 
 .account img {
     display: block;
+}
+
+.signin-stub {
+    width: max-content;
+}
+
+.signin-stub .form-label {
+    float: left;
+}
+
+.signin-stub .form-control {
+    border-radius: 20px;
+}
+
+.login-btn {
+    background-color: green !important;
+    color: white;
+    border-radius: 20px;
+    width: 90%;
+}
+
+.login-btn:active {
+    background-color: darkgreen !important;
 }
 
 .cart {
@@ -98,6 +146,27 @@
 
 .cart img {
     display: block;
+}
+
+.modal.fade #shopping-cart.modal-dialog {
+    width: 100%;
+    height: 100%;
+    float: right;
+    margin: 0;
+}
+
+#shopping-cart .modal-content {
+    height: 100%;
+    text-align: center;
+}
+
+#shopping-cart .modal-header {
+    border: none;
+}
+
+#shopping-cart .modal-footer {
+    border: none;
+    text-align: center;
 }
 
 .nav-container {
@@ -119,4 +188,29 @@
     margin-left: 100px;
     margin-right: 100px;
     font-size: 24px;
+}
+
+#occasions {
+    width: 100%;
+    padding: 20px 100px;
+    background-color: white;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    z-index: 1;
+}
+
+#occasions-lists {
+    display: flex;
+    transition: ease-in-out .3s;
+}
+
+#occasions-lists ul {
+    margin-left: 50px;
+    margin-right: 50px;
+    list-style: none;
+}
+
+#occasions-lists li a {
+    color: navy;
 }
