--- a/src/css/Designs.css
+++ b/src/css/Designs.css
@@ -18,7 +18,7 @@
 }
 
 .categories {
-    width: 50%;
+    width: 90%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
@@ -68,11 +68,16 @@
     display: none;
 }
 
-.design-container, .event-container {
+.design-container,
+.event-container {
     width: 75%;
     margin-top: 4rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+.card-columns {
+    columns: 1;
 }
 
 .card-columns .card {
@@ -81,4 +86,31 @@
 
 span[class$="_footer"] {
     display: none;
+}
+
+@media (min-width: 576px) {
+    .card-img-overlay {
+        font-size: large;
+    }
+    .card-columns {
+        columns: 2;
+    }
+}
+
+@media (min-width: 768px) {
+    .categories {
+        width: 60%;
+    }
+    .card-deck .card {
+        flex: 1 0;
+    }
+}
+
+@media (min-width: 1000px) {
+    .card-img-overlay {
+        font-size: x-large;
+    }
+    .card-columns {
+        columns: 3;
+    }
 }
