--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,23 +1,46 @@
 .heading {
     width: 100%;
-    
 }
 
 .about-container {
+    align-items: center;
     display: flex;
     margin-left: 2rem;
     margin-right: 2rem;
+    flex-direction: column;
 }
 
-.about-container img {
-    width: 400px;
-    margin: 5rem;
+#profile-pic {
+    width: 80%;
+    height: auto;
+    margin: 2rem;
 }
 
-.about-container p {
+#about-description {
     margin: 5rem;
     text-align: justify;
     align-self: center;
-    font-size: xx-large;
+    font-size: x-large;
 }
 
+@media (min-width: 1000px) {
+    .heading {
+        width: 100%;
+    }
+    .about-container {
+        display: flex;
+        flex-direction: row;
+        margin-left: 2rem;
+        margin-right: 2rem;
+    }
+    #profile-pic {
+        width: auto;
+        margin: 3rem;
+    }
+    #about-description {
+        margin: 2rem;
+        text-align: justify;
+        align-self: center;
+        font-size: xx-large;
+    }
+}
