--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -25,8 +25,8 @@ h3 {
 }
 
 .contact-form {
-    margin-left: 30%;
-    margin-right: 30%;
+    margin-left: 20%;
+    margin-right: 20%;
     margin-top: 50px;
     margin-bottom: 100px;
 }
@@ -53,4 +53,13 @@ h3 {
 
 #send-msg-btn:hover {
     background-color: darkviolet;
+}
+
+@media (min-width: 1000px) {
+    .contact-form {
+        margin-left: 30%;
+        margin-right: 30%;
+        margin-top: 50px;
+        margin-bottom: 100px;
+    }
 }
