--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -2,7 +2,6 @@
     position: relative;
     width: 100%;
     height: 100vh;
-
 }
 
 .headline {
@@ -13,11 +12,12 @@
     z-index: 2;
 }
 
-.headline h1, h3 {
+.headline h1,
+h3 {
     color: white;
 }
 
-.intro-container video{
+.intro-container video {
     width: 100%;
     height: 100%;
     object-fit: cover;
