--- a/src/css/Designs.css
+++ b/src/css/Designs.css
@@ -114,3 +114,21 @@ span[class$="_footer"] {
         columns: 3;
     }
 }
+
+.design-image {
+    animation: image-appear .5s ease-in-out;
+}
+
+@keyframes image-appear {
+    0% {
+		opacity: 0;
+		transform: scale(0);
+        -webkit-transform: scale(0);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);
+        -webkit-transform: scale(1);
+	}
+}
