--- a/src/css/Designs.css
+++ b/src/css/Designs.css
@@ -68,10 +68,10 @@
     display: none;
 }
 
-.design-container,
-.event-container {
+.design-container, .event-container {
     width: 75%;
     margin-top: 4rem;
+    margin-bottom: 5rem;
     margin-left: auto;
     margin-right: auto;
 }
@@ -119,16 +119,21 @@ span[class$="_footer"] {
     animation: image-appear .5s ease-in-out;
 }
 
+.design-image:hover {
+    cursor: pointer;
+    color: rgba(255, 255, 255, 1);
+    box-shadow: 0 5px 15px rgba(145, 92, 182, .4);
+}
+
 @keyframes image-appear {
     0% {
-		opacity: 0;
-		transform: scale(0);
+        opacity: 0;
+        transform: scale(0);
         -webkit-transform: scale(0);
-	}
-
-	100% {
-		opacity: 1;
-		transform: scale(1);
+    }
+    100% {
+        opacity: 1;
+        transform: scale(1);
         -webkit-transform: scale(1);
-	}
+    }
 }
