--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Gothic;
+    src: url("../fonts/Quicksand/Quicksand-Regular.ttf");
+}
+
 .heading {
     width: 100%;
 }
@@ -17,6 +22,7 @@
 }
 
 #about-description {
+    font-family: Gothic;
     margin: 5rem;
     text-align: justify;
     align-self: center;
@@ -28,7 +34,7 @@
         width: 100%;
     }
     #profile-pic {
-        width: auto;
+        width: 50%;
         margin: 3rem;
     }
     #about-description {
