--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,17 @@
+@font-face {
+    font-family: Gothic;
+    src: url("../fonts/Quicksand/Quicksand-Regular.ttf");
+}
+
+@font-face {
+    font-family: Gothic-Bold;
+    src: url("../fonts/Quicksand/Quicksand-SemiBold.ttf");
+}
+
+.nav-link {
+    font-family: Gothic;
+}
+
 .non-mobile-nav-item {
     display: none;
 }
@@ -129,29 +143,6 @@
     header {
         width: 100%;
         z-index: 100;
-    }
-    #services-dropdown {
-        position: absolute;
-        display: none;
-        flex-direction: column;
-        margin: 0px;
-        right: auto;
-        bottom: auto;
-        list-style: none;
-        background-color: #fff;
-        background-clip: padding-box;
-        border: 1px solid rgba(0, 0, 0, .15);
-        border-radius: .25rem;
-        float: left;
-        min-width: 10rem;
-        padding: .5rem 0;
-        z-index: 1000;
-    }
-    .dropdown-toggle::after {
-        content: none;
-    }
-    .dropdown-menu {
-        text-align: center;
     }
     .home-logo {
         width: 100px;
