--- a/src/css/Services.css
+++ b/src/css/Services.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: Gothic;
+    src: url("../fonts/Quicksand/Quicksand-Regular.ttf");
+}
+
+@font-face {
+    font-family: Gothic-Fat;
+    src: url("../fonts/Quicksand/Quicksand-Bold.ttf");
+}
+
+@font-face {
+    font-family: Gothic-Bold;
+    src: url("../fonts/Quicksand/Quicksand-SemiBold.ttf");
+}
+
 .services-banner {
     height: 50vh;
     display: flex;
@@ -11,9 +26,11 @@
 }
 
 .services-heading {
+    font-family: Gothic-Fat;
     justify-content: center;
     position: absolute;
     width: 100%;
+    color: crimson;
 }
 
 .design-sections {
@@ -22,11 +39,16 @@
 }
 
 .description {
+    font-family: Gothic-Bold;
     align-self: center;
     width: 100%;
     height: 10vh;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.description p {
+    font-family: Gothic;
 }
 
 .wedding-container {
